#171 Avoid line breaks in column headings

--- a/scenarioo-client/app/styles/scenarioo.less
+++ b/scenarioo-client/app/styles/scenarioo.less
@@ -312,6 +312,7 @@ div.sc-screenshot-scenario {
 /** Overwrite Bootstrap styles **/
 .table > thead > tr > th {
   vertical-align: top;
+  white-space: nowrap;
 }
 
 /** Tree **/
